# testable_singleton

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: Tests.yml
doc/: NOTICE.txt  example_base_usage.cpp  example_constructor.cpp  example_full_usage.cpp
include/: singleton.hpp  singleton_test.hpp
test/unit/: singleton_test.cpp
